// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders while running 1`] = `
<div
  className="sc-AykKE fYxryW"
>
  <div
    className="sc-AykKG cwQYmT"
  >
    <span
      className="sc-AykKH fMQdlv"
    >
      0
    </span>
    <span
      className="sc-AykKI gZoGVg"
    >
      42
    </span>
  </div>
  <button
    className="sc-AykKC sc-AykKD igqnsF"
    onClick={[Function]}
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  className="sc-AykKE fYxryW"
>
  <div
    className="sc-AykKF khAskg"
  >
    🛌🛌
  </div>
  <button
    className="sc-AykKC sc-AykKD hCMgfe"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  className="sc-AykKE fYxryW"
>
  <div
    className="sc-AykKF khAskg"
  >
    🍅
  </div>
  <button
    className="sc-AykKC sc-AykKD hCMgfe"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  className="sc-AykKE fYxryW"
>
  <div
    className="sc-AykKF khAskg"
  >
    🛌
  </div>
  <button
    className="sc-AykKC sc-AykKD hCMgfe"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;
